fixed marker icon not showing

--- a/src/App.css
+++ b/src/App.css
@@ -37,8 +37,8 @@
 }
 
 .leaflet-container {
-  width: 65%;
-  height: 700px;
+  width: 60%;
+  height: 500px;
   border-radius:19px;
   margin: 100px;
   background-color: #EBEBF3;
